fixed blogpost name

--- a/index.html
+++ b/index.html
@@ -871,13 +871,13 @@ Daniel Montalvo
             <div class="card h-100">
                 
                 <div class="card-header">
-                    <a href="/blogs/markdown-syntax/">
+                    <a href="/blogs/disable-plymouth/">
                         <img src="/images/posts/linux_plymouth.jpg" class="card-img-top" alt="Disable Plymouth boot screen">
                     </a>
                 </div>
                 
                 <div class="card-body bg-transparent p-3 shadow-sm">
-                    <a href="/blogs/markdown-syntax/" class="primary-font card-title">
+                    <a href="/blogs/disable-plymouth/" class="primary-font card-title">
                         <h5 class="card-title bg-transparent" title="Disable Plymouth boot screen">Disable Plymouth boot …</h5>
                     </a>
                     <div class="card-text secondary-font">
@@ -886,7 +886,7 @@ Daniel Montalvo
                 </div>
                 <div class="mt-auto card-footer">
                     <span class="float-start">January 28, 2023</span>
-                    <a href="/blogs/markdown-syntax/" class="float-end btn btn-outline-info btn-sm">Read</a>
+                    <a href="/blogs/disable-plymouth/" class="float-end btn btn-outline-info btn-sm">Read</a>
                 </div>
             </div>
         </div>
